Update for revision check system.
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@144656 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.8 $ -->
-<!-- EN-Revision: 1.33 -->
+<!-- $Revision: 1.9 $ -->
+<!-- EN-Revision: 1.33 Maintainer: fuzzy74 Status: ready -->
  <chapter id="language.constants">
   <title>상수</title>
 
