--- a/language/oop.xml
+++ b/language/oop.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.10 $ -->
-<!-- EN-Revision: 1.43 -->
+<!-- $Revision: 1.11 $ -->
+<!-- EN-Revision: 1.43 Maintainer: fuzzy74 Status: ready -->
  <chapter id="language.oop">
   <title>클래스와 객체</title>
 
