--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.16 $ -->
-<!-- EN-Revision: 1.66 -->
+<!-- $Revision: 1.17 $ -->
+<!-- EN-Revision: 1.66 Maintainer: fuzzy74 Status: ready -->
  <chapter id="language.variables">
   <title>변수</title>
   
