--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.6 $ -->
-<!-- EN-Revision: 1.34 -->
+<!-- $Revision: 1.7 $ -->
+<!-- EN-Revision: 1.34 Maintainer: fuzzy74 Status: ready -->
  <chapter id="language.basic-syntax">
   <title>기본 문법</title>
 
