--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.14 $ -->
-<!-- EN-Revision: 1.78 -->
+<!-- $Revision: 1.15 $ -->
+<!-- EN-Revision: 1.78 Maintainer: fuzzy74 Status: ready -->
  <chapter id="control-structures">
   <title>제어 구조</title>
 
