--- a/language/types.xml
+++ b/language/types.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.15 $ -->
-<!-- EN-Revision: 1.119 -->
+<!-- $Revision: 1.16 $ -->
+<!-- EN-Revision: 1.119 Maintainer: fuzzy74 Status: ready -->
  <chapter id="language.types">
   <title>타입</title>
 
